# ingesta-datos-publicos

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/DANE/: dane_extract_clean.py
src/Dane/: loader_clean_dane.py
src/SiMEM/: simem_extract_clean.py
src/banrep/: banrep_extract_clean_v3.py  banrep_loader_clean_v3.py
src/pwt/: pwt_extract_clean.py  pwt_loader_clean.py
tests/: test_smoke.py
