[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ingesta-datos-publicos"
version = "0.1.0"
description = "Loaders y utilidades para datos públicos (Python)."
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"


[tool.ruff.lint]
# Conjuntos de reglas a considerar

select = ["E", "W"]
ignore = ["E501",  "E701", "E702", "E401"]


# Reglas “flexibilizadas” 
 # "E501"  long lines 
 # "E701"  Multiple statements on one line (colon)
 # "E702"  Multiple statements on one line (semicolon)
 # "E401"  Multiple imports on one line

# Qué carpetas/archivos ignorar por completo
exclude = [
  ".git",
  ".venv",
  "out",
  "banrep_output",
  "pwt_out",
  "__pycache__",
]




